assets/CSS/style.css
/*---------------- header */

* {
    margin: 0;
    padding: 0;
    border: 0;
}

header {
    background-color: #E3B9BC;
}

.brand-name h1 {
    font-family: "Montserrat Alternates", sans-serif;
    font-size: large;
    padding-top: 15px;
}

.menu-bar {
    padding-right: 5px;
}

.nav a {
    color: #333333;
    text-decoration: none;
    font-family: "Abhaya Libre", sans-serif;
    padding-top: 15px;
}

.nav a:hover {
    color: gray;
    text-decoration: none;
}

/*------------------ footer */

.footer {
    padding-top: 10px;
    background-color: #BFA4A4;
    text-align: center;
    height: auto;
}

.footer i {
    color: #333333;
}

.footer i:hover {
    color: gray;
}

footer {
    font-family: "Abhaya Libre", sans-serif;
}

footer h4 {
    font-family: "Montserrat Alternates", sans-serif;
}

/*---------------- home page content */

.business-background {
    height: auto;
    padding-top: 100px;
    padding-bottom: 100px;
    text-align: center;
    color: #333333;
    background-color: #AA9ABA;
    font-family: "Montserrat Alternates", sans-serif;
}

.business-background h4 {
    font-family: "Abhaya Libre", sans-serif;
}

.image-table {
    width: 100%;
    border: 0;
    background-color: #AA9ABA;
}

img {
    width: 100%;
    height: 400px;
    object-fit: cover;
}

.home-schedule-button {
    margin-top: 20px;
    font-family: "Abhaya Libre", sans-serif;
}

@media screen and (max-width: 576px) {

    .image-table {
        display: none;
    }
}

@media screen and (min-width: 576px) {

    .mobile-images {
        display: none;
    }
}

/*---------------- schedule page content */

.schedule-explanation {
    text-align: center;
    padding: 20px;
    background-color: #AA9ABA;
    color: #333333;
    padding-top: 100px;
    padding-bottom: 100px;
}

.schedule-explanation h4 {
    font-family: "Montserrat Alternates", sans-serif;
    font-size: x-large;
}

.schedule-explanation p {
    font-family: "Abhaya Libre", sans-serif;
}

table {
    text-align: center;
    color: #333333;
    float: none;
    font-family: "Abhaya Libre", sans-serif;
}

a {
    color: #333333;
    text-decoration: none;
}

.schedule-explanation button {
    margin-top: 25px;
    font-family: "Abhaya Libre", sans-serif;
}


/*---------------- contact page content */

.contact-form {
    background-color: #AA9ABA;
    padding-top: 100px;
    padding-bottom: 100px;
}

.form-boxes {
    max-width: 60%;
    margin: 0 auto;
}

.contact-form button {
    margin-bottom: 10px;
    margin-top: 10px;
    padding: auto;
    font-family: "Abhaya Libre", sans-serif;
}

.contact-heading {
    font-family: "Montserrat Alternates", sans-serif;
    font-size: x-large;
}

.contact-info {
    font-family: "Abhaya Libre", sans-serif;
}

.form-boxes {
    font-family: "Abhaya Libre", sans-serif;
}

